# XL-VENTURES

./: .gitignore  API_DOCUMENTATION.md  CRUD_REPORT.md  DECISIONMESH_36_CHANGES.md  Dockerfile.backend  README.md  docker-compose.yml  package-lock.json
backend/: .env  .env.example  package-lock.json  package.json  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: factory.py
backend/app/api/: routes.py
backend/app/audit/: store.py
backend/app/core/: config.py  model_provider.py  orchestrator.py
backend/app/memory/: store.py
backend/app/models/: schemas.py
backend/app/ontology/: engine.py
backend/app/rag/: hybrid.py
backend/app/reasoning/: confidence.py  devils_advocate.py  engine.py  synthesizer.py
backend/app/simulation/: simulator.py
backend/src/: orchestrationTest.js  plannerTest.js  registryTest.js  server.js  test.js
backend/src/config/: businessRules.js
backend/src/crm/: CRMProvider.js  HubSpotAdapter.js  MockCRMAdapter.js  SalesforceAdapter.js  ZohoAdapter.js  index.js
backend/src/data/: auditLog.json  contracts.json  customers.json  latestAnalysis.json  playbooks.json
backend/src/knowledge/: playbookCorpus.js  vectorStore.js
backend/src/memory/: memoryAgent.js  memoryRetriever.js  memoryStore.json
backend/src/middleware/: contextMiddleware.js  errorMiddleware.js
backend/src/routes/: analyticsRoutes.js  architectureRoutes.js  auditRoutes.js  businessRulesRoutes.js  crmRoutes.js  customerRoutes.js  dashboardRoutes.js  devilsAdvocateRoutes.js  knowledgeRoutes.js  latestAnalysisRoutes.js  (+7 more)
backend/tests/: test_api.py  test_orchestrator.py
backend/uploads/: 1782563992832-contract.txt  1782564188771-contract.txt  1782570797485-meeting.txt  1782570797486-email.txt  1782624341706-Unrelatedbusinfo.txt
(+109 files in other folders)
