[project]
name = "decisionmesh-backend"
version = "0.1.0"
description = "DECISIONMESH AI backend"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "dspy-ai>=2.5.0",
  "pydantic-ai>=0.0.18",
  "qdrant-client>=1.11.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.8",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "ragas>=0.1.20",
  "deepeval>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

